@@ -6,24 +6,28 @@ sourceSets {
   }
 }
 
+ext {
+  guiceVersion = '5.0.1'
+}
+
 dependencies {
   // TODO : Some of these can be extracted to actual dependencies
   implementation fileTree(dir: 'lib', include: '*.jar')
 
   implementation 'com.google.code.gson:gson:2.8.6'
   implementation 'com.google.guava:guava:30.1-jre'
-  implementation 'com.google.inject:guice:4.2.3'
-  implementation 'com.google.inject.extensions:guice-assistedinject:4.2.3'
-  implementation 'com.google.inject.extensions:guice-servlet:4.2.3'
+  implementation "com.google.inject:guice:${guiceVersion}"
+  implementation "com.google.inject.extensions:guice-assistedinject:${guiceVersion}"
+  implementation "com.google.inject.extensions:guice-servlet:${guiceVersion}"
   implementation 'com.google.truth:truth:1.1.2'
   implementation 'joda-time:joda-time:2.10.10'
   api 'net.jcip:jcip-annotations:1.0'
   implementation 'org.springframework:spring-core:5.3.4'
   compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
-  implementation 'org.checkerframework:checker-qual:3.10.0'
+  implementation 'org.checkerframework:checker-qual:3.11.0'
 
   implementation 'junit:junit:4.13.1'
-  implementation 'org.testng:testng:7.3.0'
+  implementation 'org.testng:testng:7.4.0'
 
   implementation project(':spotbugs')
   api project(':spotbugs-annotations')
@@ -32,7 +36,9 @@ dependencies {
 tasks.withType(JavaCompile).configureEach {
   options.compilerArgs << '-Xlint:none'
   options.encoding = 'UTF-8'
-  if (it.name == 'classesJava11') {
+  if (it.name == 'classesJava14') {
+    options.release = 15
+  } else if (it.name == 'classesJava11') {
     options.release = 11
   } else if (it.name != 'compileJava') {
     options.release = 8
@@ -52,6 +58,7 @@ tasks.named('javadoc', Javadoc).configure {
   }
 }
 
+def jvmVersion = Integer.parseInt(System.getProperty("java.specification.version"))
 def classesJava8 = tasks.register('classesJava8', JavaCompile) {
   destinationDir = file("$buildDir/classes/java/java8")
   classpath = sourceSets.main.compileClasspath
@@ -64,9 +71,19 @@ def classesJava11 = tasks.register('classesJava11', JavaCompile) {
   source = file('src/java11')
 }
 
+def classesJava14 = tasks.register('classesJava14', JavaCompile) {
+  options.compilerArgs.add('--enable-preview')
+  destinationDir = file("$buildDir/classes/java/java14")
+  classpath = sourceSets.main.compileClasspath
+  source = file('src/java14')
+}
+
 tasks.named('classes').configure {
   dependsOn classesJava8
   dependsOn classesJava11
+  if (jvmVersion >= 14) {
+    dependsOn classesJava14
+  }
 }
 
 sonarqube {
